[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "a4py"
authors = [{ name = "Kang Zhao", email = "zkis@live.cn" }]
classifiers = ["Private :: Do Not Upload"]
dynamic = ["version", "description"]
requires-python = ">=3.5"
dependencies = [
    "antlr4-python3-runtime==4.9.2"
]

[tool.flit.module]
name = "py"

[tool.flit.sdist]
exclude = ["datagen/.idea/", "datagen/.git/", "datagen/datagen.iml", "datagen/.DS_Store"]
include = ["py"]
